# peripheral_uart_new

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.rst  app.overlay  pm-static.yml  prj.conf  prj_minimal.conf  regions.yml
boards/: thingy53_nrf5340_cpuapp.overlay
build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  partitions.yml  pm.config  regions.yml  tfm_merged.hex  zephyr_modules.txt  zephyr_settings.txt
build_1/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig
build_1/hci_rpmsg/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  partitions_CPUNET.yml  pm_CPUNET.config  regions_CPUNET.yml  shared_vars.cmake
build_1/tfm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt
build_1/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  GENERATED_CP_APPLICATION_merged_domains.hex  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  merged.hex  merged_domains.hex  runners.yaml  tfm_nonsecure.hex  tfm_secure.hex  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map  zephyr_pre1.elf  zephyr_pre1.map
case_3D/: Caixa_Base.SLDPRT  Caixa_Base.STL  Caixa_Base.g
case_3D/Solidworks_Caixa/: 3 aa battery.sldprt  3AA ASSY pack.SLDASM  3AA ASSY.err  AA BATTERY.sldprt  Caixa_Base.SLDPRT  Caixa_Base.STL  Caixa_Base.vfp  MontagemCaixa Sensores V1.SLDASM  MontagemCaixa V1.SLDASM  NEG TERMINAL.sldprt  NRF5340DK.err  POS TERMINAL.sldprt  Placa_Outline.SLDPRT  Placa_Suporte_Lora.SLDPRT  Placa_Suporte_NTC.SLDPRT  conjunto_tampa_base.vfp  tampa_sensores.SLDPRT  tampa_sensores.STL
includes/Protobuf/: data_def_v0_pb.c  data_def_v0_pb.h  data_received.txt  pb_common.c  pb_common.h  (+4 more)
src/: main.c
(+345 files in other folders)
